--- a/weather/templates/weather/index.html
+++ b/weather/templates/weather/index.html
@@ -90,6 +90,11 @@
         </div>
     </section>
     <footer class="footer">
+      <div class="container">
+          <div class="content has-text-centered">
+              <img src="{% static 'images/weather-app.png' %}" alt="Picture of a Weather app" />
+          </div>
+      </div>
     </footer>
     <script src="{% static 'js/jquery-3.3.1.min.js' %}"></script>
     <script src="{% static 'js/popper.min.js' %}"></script>
